--- a/src/components/HomeCarousel.css
+++ b/src/components/HomeCarousel.css
@@ -1,8 +1,14 @@
-.Carousel.Caption {
-    text-decoration: none;
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
+.carousel-image {
+    width: 100%;
+    height: 32em;
+    object-fit: cover;
+}
+
+.caption {
     color: white;
-    font-weight: 700;
-    line-height: 2rem;
     font-family: "Merriweather", serif;
-    letter-spacing: 2px;
+    font-weight: 700;
+    font-size: 25px;
 }
