--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 2em 4em 2em 4em;
+    padding: 2em;
     text-align: center;
 }
 
