--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,9 +1,7 @@
 .prdcard-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 2em;
-    gap: 3em;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 2em 3em 2em 3em;
 }
 
 .prdcard {
@@ -11,6 +9,7 @@
     flex-direction: column;
     text-align: center;
     text-decoration: none;
+    justify-self: center;
 }
 
 .picture-container {
@@ -42,7 +41,7 @@
     margin-top: 0.5em;
     color: black;
     font-family: "Merriweather", serif;
-    font-size: 22px;
+    font-size: 1.1em;
     letter-spacing: 1px;
     font-weight: 600;
 }
@@ -50,5 +49,50 @@
 .prdprice {
     color: gray;
     font-family: "Merriweather", serif;
-    font-size: 18px;
+    font-size: 0.8em;
+}
+
+@media screen and (max-width: 1080px) {
+    .prdcard-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        padding: 2em;
+    }
+
+    .picture {
+        width: 12em;
+        height: 12em;
+    }
+
+    .prdname {
+        font-size: 0.9em;
+    }
+    
+    .prdprice {
+        font-size: 0.7em;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .prdcard-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        padding: 2em;
+    }
+
+    .picture {
+        width: 12em;
+        height: 12em;
+    }
+
+    .prdname {
+        font-size: 0.8em;
+    }
+    
+    .prdprice {
+        font-size: 0.6em;
+    }
+    
 }
