--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -103,6 +103,13 @@
     margin-left: 30vw;
 }
 
+.cart-span {
+    background-color: red;
+    padding: 2px 6px 2px 6px;
+    border-radius: 50%;
+    margin-left: -14px;
+}
+
 @media screen and (max-width: 800px) {
     .component-container {
         grid-template-columns: 1fr 1fr;
